@@ -116,3 +116,137 @@ Broker
             KAFKA_SUPER_USERS: "User:service-account-kafka"
             KAFKA_OAUTH_USERNAME_CLAIM: "preferred_username"
 
+Schema-registry
+---------------
+          environment:
+            SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'broker:9092'
+            SCHEMA_REGISTRY_LISTENERS: http://schema-registry:8081
+            SCHEMA_REGISTRY_KAFKASTORE_SECURITY_PROTOCOL: SASL_SSL
+            SCHEMA_REGISTRY_KAFKASTORE_SASL_MECHANISM: OAUTHBEARER
+            SCHEMA_REGISTRY_KAFKASTORE_SSL_KEYSTORE_LOCATION: /etc/ssl/certs/docker/broker1.jks
+            SCHEMA_REGISTRY_KAFKASTORE_SSL_KEYSTORE_PASSWORD: dockerpw
+            SCHEMA_REGISTRY_KAFKASTORE_SSL_KEY_PASSWORD: dockerpw
+            SCHEMA_REGISTRY_KAFKASTORE_SSL_TRUSTSTORE_LOCATION: /etc/ssl/certs/docker/truststore.jks
+            SCHEMA_REGISTRY_KAFKASTORE_SSL_TRUSTSTORE_PASSWORD: dockerpw
+            SCHEMA_REGISTRY_KAFKASTORE_SASL_LOGIN_CALLBACK_HANDLER_CLASS: io.strimzi.kafka.oauth.client.JaasClientOauthLoginCallbackHandler
+            SCHEMA_REGISTRY_KAFKASTORE_SASL_JAAS_CONFIG: >
+                    org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required
+                    oauth.client.id="kafka"
+                    oauth.client.secret="TbAyucpBG0klhl9ajgF1dfEXUlbz8nYR"
+                    oauth.ssl.truststore.location="/etc/ssl/certs/docker/truststore.jks"
+                    oauth.ssl.truststore.password="dockerpw"
+                    oauth.token.endpoint.uri="https://keycloak:8443/realms/demo/protocol/openid-connect/token";
+Connect
+-------
+          command:
+            - bash
+            - -c
+            - |
+              rm /usr/share/java/cp-base-new/slf4j-log4j12-*.jar
+              echo "Launching Kafka Connect"
+              /etc/confluent/docker/run &
+              sleep infinity
+          environment:
+            CONNECT_BOOTSTRAP_SERVERS: broker:9092
+            CUB_CLASSPATH: '/usr/share/java/confluent-security/connect/*:/usr/share/java/kafka/*:/usr/share/java/cp-base-new/*'
+            CONNECT_PLUGIN_PATH: "/usr/share/java, /usr/share/confluent-hub-components, /opt/stream-reactor-1.2.3-2.1.0/, /opt/stream-reactor-3.0.1-2.5.0,/usr/share/java/cp-base-new/"
+            CONNECT_LOG4J_ROOT_LOGLEVEL: INFO
+            CONNECT_LOG4J_LOGGERS: org.apache.zookeeper=INFO,org.I0Itec.zkclient=INFO,org.reflections=INFO,log4j.rootLogger="DEBUG, A1" , log4j.appender.A1=org.apache.log4j.ConsoleAppender
+            CONNECT_SASL_JAAS_CONFIG: >
+                    org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required
+                    oauth.client.id="kafka"
+                    oauth.client.secret="TbAyucpBG0klhl9ajgF1dfEXUlbz8nYR"
+                    oauth.ssl.truststore.location="/etc/ssl/certs/docker/new-truststore.jks"
+                    oauth.ssl.truststore.password="dockerpw"
+                    oauth.token.endpoint.uri="https://keycloak:8443/realms/demo/protocol/openid-connect/token";
+            CONNECT_SECURITY_PROTOCOL: SASL_SSL
+            CONNECT_SASL_MECHANISM: OAUTHBEARER
+            CONNECT_SASL_LOGIN_CALLBACK_HANDLER_CLASS: io.strimzi.kafka.oauth.client.JaasClientOauthLoginCallbackHandler
+            CONNECT_SSL_KEYSTORE_LOCATION: /etc/ssl/certs/docker/new-broker1.jks
+            CONNECT_SSL_KEYSTORE_PASSWORD: dockerpw
+            CONNECT_SSL_KEY_PASSWORD: dockerpw
+            CONNECT_SSL_TRUSTSTORE_LOCATION: /etc/ssl/certs/docker/new-truststore.jks
+            CONNECT_SSL_TRUSTSTORE_PASSWORD: dockerpw
+ 
+ksqldb-server
+-------------
+          environment:
+            KSQL_SASL_JAAS_CONFIG: >
+                   org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required
+                   oauth.client.id="kafka"
+                   oauth.client.secret="TbAyucpBG0klhl9ajgF1dfEXUlbz8nYR"
+                   oauth.ssl.truststore.location="/etc/ssl/certs/docker/truststore.jks"
+                   oauth.ssl.truststore.password="dockerpw"
+                   oauth.token.endpoint.uri="https://keycloak:8443/realms/demo/protocol/openid-connect/token";
+            KSQL_SECURITY_PROTOCOL: SASL_SSL
+            KSQL_SASL_MECHANISM: OAUTHBEARER
+            KSQL_SASL_LOGIN_CALLBACK_HANDLER_CLASS: io.strimzi.kafka.oauth.client.JaasClientOauthLoginCallbackHandler
+            KSQL_SSL_KEYSTORE_LOCATION: /etc/ssl/certs/docker/broker1.jks
+            KSQL_SSL_KEYSTORE_PASSWORD: dockerpw
+            KSQL_SSL_KEY_PASSWORD: dockerpw
+            KSQL_SSL_TRUSTSTORE_LOCATION: /etc/ssl/certs/docker/truststore.jks
+            KSQL_SSL_TRUSTSTORE_PASSWORD: dockerpw
+          command: "bash -c 'echo Waiting for Kafka to be ready... && cub kafka-ready -b broker:9092 1 40 && echo Waiting for Confluent Schema Registry to be ready... && cub sr-ready schema-registry 8081 40 &&  echo Waiting a few seconds for topic creation to finish... && sleep 11 && tail -f /dev/null'"
+            KSQL_LOG4J_ROOTLOGGER: INFO
+            STREAMS_BOOTSTRAP_SERVERS: broker:9092
+
+ksql-datagen
+------------
+          environment:
+            STREAMS_SASL_JAAS_CONFIG: >
+                   org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required
+                   oauth.client.id="kafka"
+                   oauth.client.secret="TbAyucpBG0klhl9ajgF1dfEXUlbz8nYR"
+                   oauth.ssl.truststore.location="/etc/ssl/certs/docker/truststore.jks"
+                   oauth.ssl.truststore.password="dockerpw"
+                   oauth.token.endpoint.uri="https://keycloak:8443/realms/demo/protocol/openid-connect/token";
+            STREAMS_SECURITY_PROTOCOL: SASL_SSL
+            STREAMS_SASL_MECHANISM: OAUTHBEARER
+            STREAMS_SASL_LOGIN_CALLBACK_HANDLER_CLASS: io.strimzi.kafka.oauth.client.JaasClientOauthLoginCallbackHandler
+
+rest-proxy
+----------
+          environment:
+            KAFKA_REST_CLIENT_SECURITY_PROTOCOL: SASL_SSL
+            KAFKA_REST_CLIENT_SASL_MECHANISM: OAUTHBEARER
+            KAFKA_REST_CLIENT_SSL_KEYSTORE_LOCATION: /etc/ssl/certs/docker/broker1.jks
+            KAFKA_REST_CLIENT_SSL_KEYSTORE_PASSWORD: dockerpw
+            KAFKA_REST_CLIENT_SSL_KEY_PASSWORD: dockerpw
+            KAFKA_REST_CLIENT_SSL_TRUSTSTORE_LOCATION: /etc/ssl/certs/docker/truststore.jks
+            KAFKA_REST_CLIENT_SSL_TRUSTSTORE_PASSWORD: dockerpw
+            KAFKA_REST_CLIENT_SASL_LOGIN_CALLBACK_HANDLER_CLASS: io.strimzi.kafka.oauth.client.JaasClientOauthLoginCallbackHandler
+            KAFKA_REST_CLIENT_SASL_JAAS_CONFIG: >
+                    org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required
+                    oauth.client.id="kafka"
+                    oauth.client.secret="TbAyucpBG0klhl9ajgF1dfEXUlbz8nYR"
+                    oauth.ssl.truststore.location="/etc/ssl/certs/docker/truststore.jks"
+                    oauth.ssl.truststore.password="dockerpw"
+                    oauth.token.endpoint.uri="https://keycloak:8443/realms/demo/protocol/openid-connect/token";
+
+kafka-ui
+--------
+        
+          command: " java --add-opens java.rmi/javax.rmi.ssl=ALL-UNNAMED -cp /kafka-ui-api.jar -Dloader.path=/usr/share/java/cp-base-new/ org.springframework.boot.loader.PropertiesLauncher"
+		  environment:
+            SERVER_PORT: 8443
+            SERVER_SSL_KEY-STORE: /etc/ssl/certs/docker/kafka-ui1.jks
+            SERVER_SSL_KEY-STORE-PASSWORD: dockerpw
+            SERVER_SSL_KEY-PASSWORD: dockerpw
+            KAFKA_CLUSTERS_0_PROPERTIES_SECURITY_PROTOCOL: SASL_SSL
+            KAFKA_CLUSTERS_0_PROPERTIES_SASL_MECHANISM: OAUTHBEARER
+            KAFKA_CLUSTERS_0_PROPERTIES_SSL_KEYSTORE_LOCATION: /etc/ssl/certs/docker/broker1.jks
+            KAFKA_CLUSTERS_0_PROPERTIES_SSL_KEYSTORE_PASSWORD: dockerpw
+            KAFKA_CLUSTERS_0_PROPERTIES_SSL_KEY_PASSWORD: dockerpw
+            KAFKA_CLUSTERS_0_PROPERTIES_SSL_TRUSTSTORE_LOCATION: /etc/ssl/certs/docker/truststore.jks
+            KAFKA_CLUSTERS_0_PROPERTIES_SSL_TRUSTSTORE_PASSWORD: dockerpw
+            KAFKA_CLUSTERS_0_PROPERTIES_SASL_LOGIN_CALLBACK_HANDLER_CLASS: io.strimzi.kafka.oauth.client.JaasClientOauthLoginCallbackHandler
+            KAFKA_CLUSTERS_0_PROPERTIES_SASL_JAAS_CONFIG: >
+                   org.apache.kafka.common.security.oauthbearer.OAuthBearerLoginModule required
+                   oauth.username.claim="preferred_username"
+                   unsecuredLoginStringClaim_sub="unused"
+                   oauth.client.id="kafka"
+                   oauth.client.secret="TbAyucpBG0klhl9ajgF1dfEXUlbz8nYR"
+                   oauth.ssl.truststore.location="/etc/ssl/certs/docker/truststore.jks"
+                   oauth.ssl.truststore.password="dockerpw"
+                   oauth.token.endpoint.uri="https://keycloak:8443/realms/demo/protocol/openid-connect/token";
+     
